[package]
name = "tetengo_lattice"
version = "1.3.1"
authors = ["kaoru"]
edition = "2021"
rust-version = "1.83"
description = "A library for Viterbi search and A* algorithm implementation"
readme = "README.md"
homepage = "https://www.tetengo.org/"
repository = "https://github.com/tetengo/tetengo.rs"
license = "MIT"
keywords = [
    "a-star",
    "dynamic-programming",
    "path",
    "search",
    "viterbi",
]
categories = [
    "algorithms",
    "text-processing",
]

[dependencies]
anyhow = "1.0.95"
thiserror = "2.0.9"
unicode-width = "0.2.0"
