[package]
name = "tetengo_lattice"
version = "1.4.0"
authors = ["kaoru"]
edition = "2024"
rust-version = "1.86"
description = "A library for Viterbi search and A* algorithm implementation"
readme = "README.md"
homepage = "https://www.tetengo.org/"
repository = "https://github.com/tetengo/tetengo.rs"
license = "MIT"
keywords = [
    "a-star",
    "dynamic-programming",
    "path",
    "search",
    "viterbi",
]
categories = [
    "algorithms",
    "text-processing",
]

[dependencies]
thiserror = "2.0.12"
unicode-width = "0.2.0"
