[package]
name = "tetengo_trie"
version = "1.3.2"
authors = ["kaoru"]
edition = "2021"
rust-version = "1.83"
description = "A trie library implemented with a double array"
readme = "README.md"
homepage = "https://www.tetengo.org/"
repository = "https://github.com/tetengo/tetengo.rs"
license = "MIT"
keywords = [
    "common-prefix-search",
    "data-structure",
    "double-array",
    "search",
    "trie",
]
categories = [
    "algorithms",
    "data-structures",
    "text-processing",
]

[dependencies]
anyhow = "1.0.95"
hashlink = "0.10.0"
memmap2 = "0.9.5"
tempfile = "3.14.0"
thiserror = "2.0.9"
