[package]
name = "tetengo_trie"
version = "1.5.0"
authors = ["kaoru"]
edition = "2024"
rust-version = "1.86"
description = "A trie library implemented with a double array"
readme = "README.md"
homepage = "https://www.tetengo.org/"
repository = "https://github.com/tetengo/tetengo.rs"
license = "MIT"
keywords = [
    "common-prefix-search",
    "data-structure",
    "double-array",
    "search",
    "trie",
]
categories = [
    "algorithms",
    "data-structures",
    "text-processing",
]

[dependencies]
hashlink = "0.10.0"
memmap2 = "0.9.5"
tempfile = "3.20.0"
thiserror = "2.0.12"
