[package]
name = "tetengo_trie"
version = "1.5.1"
authors = ["kaoru"]
edition = "2024"
rust-version = "1.95"
description = "A trie library implemented with a double array"
readme = "README.md"
homepage = "https://www.tetengo.org/"
repository = "https://github.com/tetengo/tetengo.rs"
license = "MIT"
keywords = [
    "common-prefix-search",
    "data-structure",
    "double-array",
    "search",
    "trie",
]
categories = [
    "algorithms",
    "data-structures",
    "text-processing",
]

[dependencies]
hashlink = "0.11.0"
memmap2 = "0.9.10"
tempfile = "3.27.0"
thiserror = "2.0.18"
